fix notification spacing, add about page other STUFF

--- a/public/assets/main.css
+++ b/public/assets/main.css
@@ -798,7 +798,3 @@ blockquote::before {
 .notificationTop .notificationMention {
     font-weight: 600;
 }
-
-.mCC-stat {
-    width: 100%;
-}
